# amethyst-boids

./: Cargo.toml  README.md
resources/: boid.glb  boid.gltf  display_config.ron  prefab.ron
src/: loadassets.rs  main.rs  mod.rs
src/boids/: mod.rs
src/render/: mod.rs  render.rs
src/states/: loadassets.rs  mod.rs  scene.rs
