[package]
name = "boids"
version = "0.1.0"
authors = []
edition = "2018"

[dependencies]
nalgebra = "*"
rayon = "*"
rand = "*"

[dependencies.amethyst]
git = "https://github.com/amethyst/amethyst"
rev = "1ef254d"
features = ["gltf", "vulkan"]

[dependencies.shred]
version = "*"
features = ["nightly"]